# expelliarmus

./: .coveragerc  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  potter.toml  setup.cfg  setup.py
.github/workflows/: build.yml
docs/: conf.py  index.rst  quickstart.md  requirements.txt
docs/about/: contributing.rst  index.rst  info.rst
docs/benchmarking/: comparison.ipynb  index.rst  script.ipynb
expelliarmus/: .expelliarmus_wrapper.py.swp  __init__.py  clib_expelliarmus.py  clib_muggle.py  expelliarmus.py  expelliarmus_mod.py  expelliarmus_wrapper.py  muggle.py  muggle_wrapper.py  utils.py
expelliarmus/muggle/: __init__.py  clib.py  muggle.py  muggle_wrapper.py
expelliarmus/src/: dat.c  dat.h  events.c  events.h  evt2.c  evt2.h  evt3.c  evt3.h  expelliarmus.c  expelliarmus.h  muggle.c  muggle.h  python_wrapper.c  wizard.c  wizard.h
expelliarmus/wizard/: __init__.py  clib.py  wizard.py  wizard_wrapper.py
potter/: .setup.py.swp  __init__.py  decoders.py  potter.py
potter/src/: .potter.c.swp  .potter.h.swp  numpy_interface.c  potter.c  potter.h
tests/: .test_file_decoding.py.swp  test_chunk_read.py  test_cut.py  test_file_cutting.py  test_file_decoding.py  test_function_args.py  test_muggle.py  test_read.py  test_save.py  test_time_window.py
tests/sample-files/: dat_sample.npy  evt2_sample.raw  evt2_sample.raw.bak  evt3_sample.npy  evt3_sample.raw
tests/utils/: utils.py
