[metadata] 
name = expelliarmus
author = Fabrizio Ottati, Gregor Lenz
author_email = fabriziottati@gmail.com, mail@lenzgregor.com
description_file = README.md
description_content_type = text/markdown
summary = A Python/C package for reading binary DVS files to NumPy arrays of events.
project_urls =
 Source code = https://github.com/fabhertz95/expelliarmus
license = GNU GPLv2

[files]

packages = expelliarmus
